# Knots-and-Crosses

./: .gitignore  BuildGLFW.bat  CMakeLists.txt  README.md
boxer/include/boxer/: boxer.h
boxer/src/: boxer_linux.cpp  boxer_mac.mm  boxer_win.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Settings.hpp  ShaderMgmt.hpp  config.hpp
src/: Knc.cpp  Settings.cpp  ShaderMgmt.cpp
src/rsrc/shaders/: main.fs  main.vs
